--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
   <section id="sotd"></section><!-- Wordt automatisch gevuld -->
 
   <!-- TODO: voeg hier je eigen hoofdstukken toe -->
-  <section data-include-format="markdown" data-include="ch01.md" class="informative"></section>
-  <section data-include-format="markdown" data-include="ch02.md"></section>
-  <section data-include-format="markdown" data-include="mermaid.md"></section>
+  <section data-include-format="markdown" data-include="Inleiding.md" class="informative"></section>
+  <section data-include-format="markdown" data-include="Metadata_extensie.md"></section>
+  <section data-include-format="markdown" data-include="Data element.md"></section>
 
   <section id='conformance'></section>
   <section id='tof'></section>
