--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
   <section id="sotd"></section><!-- Wordt automatisch gevuld -->
 
   <!-- TODO: voeg hier je eigen hoofdstukken toe -->
-  <section data-include-format="markdown" data-include="Inleiding.md" class="informative"></section>
+  <section data-include-format="markdown" data-include="Inleiding.md"></section>
   <section data-include-format="markdown" data-include="Data element.md"></section>
   <section data-include-format="markdown" data-include="Metadata_extensie.md"></section>
 
-  <section id='conformance'></section>
+ <!-- <section id='conformance'></section> -->
   <section id='tof'></section>
-  <section id="index"></section>
+ <section id="index"></section>
 </body>
 
 </html>
