Base vocab on DataItem

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
 
   <!-- TODO: voeg hier je eigen hoofdstukken toe -->
   <section data-include-format="markdown" data-include="Inleiding.md"></section>
-  <section data-include-format="markdown" data-include="Data element.md"></section>
+  <!-- <section><h2>Vocabulary</h2> -->
+  <section data-include-format="markdown" data-include="vocabulary.md"></section>
+  <!-- <section data-include="conceptualmodel.html"></section> -->
+<!-- </section> -->
   <section data-include-format="markdown" data-include="Metadata_extensie.md"></section>
 
  <!-- <section id='conformance'></section> -->
