--- a/index.html
+++ b/index.html
@@ -5,6 +5,29 @@
   <meta content="text/html; charset=utf-8" http-equiv="content-type">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <script src="https://cdn.jsdelivr.net/gh/digitalbazaar/respec-mermaid@1.0.1/dist/main.js" class="remove"></script>
+  <script class="remove">
+    async function loadTurtle() {
+      //this is the function you call in 'preProcess', to load the highlighter
+      const worker = await new Promise(resolve => {
+        require(["core/worker"], ({ worker }) => resolve(worker));
+      });
+      const action = "highlight-load-lang";
+      const langURL =
+        "https://cdn.jsdelivr.net/gh/redmer/highlightjs-turtle/src/languages/turtle.js";
+      const propName = "hljsDefineTurtle"; // This funtion is defined in the highlighter being loaded
+      const lang = "turtle"; // this is the class you use to identify the language
+      worker.postMessage({ action, langURL, propName, lang });
+      return new Promise(resolve => {
+        worker.addEventListener("message", function listener({ data }) {
+          const { action: responseAction, lang: responseLang } = data;
+          if (responseAction === action && responseLang === lang) {
+            worker.removeEventListener("message", listener);
+            resolve();
+          }
+        });
+      });
+    }
+  </script>
   <script src="https://tools.geostandaarden.nl/respec/config/geonovum-config.js" class="remove"></script>
   <script src="js/config.js" class="remove"></script>
   <script class="remove"> respecConfig = {...organisationConfig, ...respecConfig}</script>
